Propagate to shapes sometimes overwrites all mesh vertices when mirroring enabled #116239

Closed
opened 2023-12-15 23:46:34 +01:00 by sentharn · 3 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: Intel(R) Arc(TM) A770 Graphics Intel 4.6.0 - Build 31.0.101.5081

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: 3.6.7

Caused by 4d0dbab5b1

Short description of error
When using the "Propagate to Shapes" operator with some vertices or vertex selected and one of the mirroring functions set (X for example), it may also affect the mirrored vertex (sometimes) but in other cases will completely overwrite all the vertices in the mesh. It seems very inconsistent which case will happen. Sometimes it even works properly!

Exact steps for others to reproduce the error
Open the file
Make sure you're on the Basis shapekey
Propagate to shapes using the selected vertex
Check asym shapekey. All the verts should be fine.

Open file
Make sure you're on the Basis shapekey
Enable X mirroring
Propagate to shapes using the selected vertex
Check asym shapekey. It should now be overwritten by the Basis shapekey, yielding a cube.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: Intel(R) Arc(TM) A770 Graphics Intel 4.6.0 - Build 31.0.101.5081 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: 3.6.7 Caused by 4d0dbab5b1 **Short description of error** When using the "Propagate to Shapes" operator with some vertices or vertex selected and one of the mirroring functions set (X for example), it may also affect the mirrored vertex (sometimes) but in other cases will completely overwrite all the vertices in the mesh. It seems very inconsistent which case will happen. Sometimes it even works properly! **Exact steps for others to reproduce the error** Open the file Make sure you're on the Basis shapekey Propagate to shapes using the selected vertex Check asym shapekey. All the verts should be fine. Open file Make sure you're on the Basis shapekey Enable X mirroring Propagate to shapes using the selected vertex Check asym shapekey. It should now be overwritten by the Basis shapekey, yielding a cube.
139 KiB
sentharn added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-15 23:46:35 +01:00
Member

Thanks for the report. Can confirm, though I'm not able to redo it from scratch.

Thanks for the report. Can confirm, though I'm not able to redo it from scratch.
Pratik Borhade added
Module
Modeling
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-12-19 07:40:00 +01:00
Member

Caused by 4d0dbab5b1

Will check on this

Caused by 4d0dbab5b1bfcef76d14c43f4659792841be12c0 Will check on this
Member

Think I got a fix, will post shortly

Think I got a fix, will post shortly
Philipp Oeser self-assigned this 2023-12-19 11:15:44 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-19 12:35:09 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116239
No description provided.